# npmx-zephyr

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  Kconfig  README.md  west.yml
.github/workflows/: compile-samples.yml  publish-documentation.yml
doc/: additional_resources.rst  conf.py  generate_sphinx_doc.sh  index.rst  links.txt  release_notes.rst  requirements-doc.txt  samples.rst  shortcuts.txt  sphinx_build_doc_in_docker.sh  sphinx_build_local.sh
doc/_extensions/: table_from_rows.py
doc/includes/: build_and_run.txt  npm1300_ek_connections.txt  npm1300_ek_connections_with_battery.txt  sample_board_rows.txt
drivers/: CMakeLists.txt  Kconfig
drivers/npmx/: CMakeLists.txt  Kconfig  npmx_config.h  npmx_config_npm1300.h  npmx_config_npm1300_eng_b.h  npmx_config_npm1300_eng_c.h  npmx_config_npm1304.h  npmx_driver.c  npmx_driver.h  npmx_glue.c  npmx_glue.h  npmx_shell.c
modules/: CMakeLists.txt
samples/buck/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/buck_output_advanced/: CMakeLists.txt  README.rst  sample.yaml
samples/buck_output_simple/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/buck_pins/: CMakeLists.txt  README.rst  sample.yaml
samples/buck_retention/: CMakeLists.txt  README.rst  sample.yaml
samples/charger_and_events/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/fuel_gauge/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/ldo/: CMakeLists.txt  (+3 more)
scripts/: LICENSE-template.txt  install_hooks.py  requirements-format.txt  requirements.txt
(+94 files in other folders)
